Added menu image hover effect

--- a/menu.html
+++ b/menu.html
@@ -23,21 +23,21 @@
 
       <div class="outer">
         <div class="centerdiv">
-        <div>
-          <img src="image/coffee.jpg" class="img-responsive img-circle " alt="Cinque Terre" style="width:200px;height:200px;">
-          <a>Coffee</a>
-        </div>
-        <div >
-          <img src="image/smoothie.jpg" class="img-responsive img-circle" alt="Cinque Terre"style="width:200px;height:200px;">
-          <a>Smoothie</a>
+        <div class="brightness">
+          <a href=""f="#"><img src="image/coffee.jpg" class="img-responsive img-circle " alt="Cinque Terre" style="width:200px;height:200px;"> </a>
+          <b>Coffee </b>
         </div>
         <div>
-          <img src="image/tea.jpg"  class="img-responsive img-circle" alt="Cinque Terre" style="width:200px;height:200px;">
-          <a>Tea</a>
+          <a href="#"><img src="image/smoothie.jpg" class="img-responsive img-circle" alt="Cinque Terre"style="width:200px;height:200px;"></a>
+          <b>Smoothie </b>
         </div>
         <div>
-          <img src="image/donut.jpg" class="img-responsive img-circle" alt="Cinque Terre"style="width:200px;height:200px;">
-          <a>Donut</a>
+          <a href="#"><img src="image/tea.jpg"  class="img-responsive img-circle" alt="Cinque Terre" style="width:200px;height:200px;"></a>
+          <b>Tea </b>
+        </div>
+        <div>
+          <a href="#"><img src="image/donut.jpg" class="img-responsive img-circle" alt="Cinque Terre"style="width:200px;height:200px;"></a>
+          <b>Donut </b>
         </div>
       </div>
     </div>
