Working on Menu layout

--- a/about.html
+++ b/about.html
@@ -19,9 +19,7 @@
           </ul>
         </div>
       </nav>
-
     </div>
-
-
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2988.1523927302037!2d-81.68715948412633!3d41.5009722792538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8830fa7deedf560b%3A0xd9d824f31ad12a70!2sThe+Copper+Moon!5e0!3m2!1sen!2sus!4v1492201033006" width="500" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
   </body>
 </html>
