Touch up on menu with more visual effect

--- a/menu.html
+++ b/menu.html
@@ -46,47 +46,62 @@
     <div class="coffee" id="A">
       <div class="coffeemenu">
         <ul>
-          <li><a>Fresh Brew Coffee</a></li>
-          <li><a>Cafe Americano</a></li>
-          <li><a>Cappuccino</a></li>
-          <li><a>Cafe Late</a></li>
-          <li><a>Caffe Mocha</a></li>
-          <li><a>White Chocolate Mocha</a></li>
-          <li><a>Expresso</a></li>
-          <li><a>Iced Cafe</a></li>
+          <div id="coffeeHeader">
+            <li >COFFEE:</li>
+          </div>
+          <div id="coffeeMenuItems">
+              <li>Fresh Brew Coffee</li>
+              <li>Cafe Americano</li>
+              <li>Cappuccino</li>
+              <li>Cafe Late</li>
+              <li>Caffe Mocha</li>
+              <li>White Chocolate Mocha</li>
+              <li>Expresso</li>
+              <li>Iced Cafe</li>
+            </div>
         <ul>
       </div>
       <div class="cofeepic">
-
+        <img id=coffee1 src="image/coffee1.jpg" >
       </div>
     </div>
 
     <div class="smoothie" id="B">
       <div class="smoothiemenu">
         <ul>
-          <li><a>Your Favorite Smoothie with Mix and Match:</a></li>
-          <li><a>Strawberry</a></li>
-          <li><a>Blueberry</a></li>
-          <li><a>Mango</a></li>
-          <li><a>Banana</a></li>
-          <li><a>Pineapple</a></li>
-          <li><a>Kiwi</a></li>
+          <div id="smoothieHeader">
+            <li>Mix and Match your Favorite SMOOTHIE:</li>
+          </div>
+          <div id="smoothieMenuItems">
+            <li>Strawberry</li>
+            <li>Blueberry</li>
+            <li>Mango</li>
+            <li>Banana</li>
+            <li>Pineapple</li>
+            <li>Kiwi</li>
+          </div>
         <ul>
       </div>
-      <div class=smothiepic>
+      <div class=smoothiePic>
+        <img id=smoothie1 src="image/smoothie1.jpg" >
       </div>
     </div>
 
     <div class="tea" id="C">
       <div class="teamenu">
         <ul>
-          <li><a>Available in Green and Black with Flavors:</a></li>
-          <li><a>Peach</a></li>
-          <li><a>Raspberry</a></li>
-          <li><a>Blackberry</a></li>
+          <div id="teaHeader">
+            <li >TEA (available in Green or Black):</li>
+          </div>
+          <div id="teaMenuItems">
+            <li>Peach</li>
+            <li>Raspberry</li>
+            <li>Blackberry</li>
+          </div>
         <ul>
       </div>
       <div class="teapic">
+        <img id=tea1 src="image/tea1.jpg" >
       </div>
     </div>
 
