Added about, gallery, contact information

--- a/about.html
+++ b/about.html
@@ -16,10 +16,51 @@
             <li><a href="menu.html">MENU</a></li>
             <li class="active"><a href="about.html">ABOUT</a></li>
             <li><a href="gallery.html">GALLERY</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
           </ul>
         </div>
       </nav>
     </div>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2988.1523927302037!2d-81.68715948412633!3d41.5009722792538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8830fa7deedf560b%3A0xd9d824f31ad12a70!2sThe+Copper+Moon!5e0!3m2!1sen!2sus!4v1492201033006" width="500" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+    <div id=logo>
+      <img src="image/CopperMoon.png" style="width:200px;height:200px;">
+    </div>
+
+    <div class="aboutMaster">
+
+      <div class="history">
+        <div class="historyHeader">
+          A Little About Us:
+        </div>
+        <div class="historyList">
+          The Copper Moon was found in May 2011. The owner, James Orlando, who has always been infatuated by the beautiful craft of being a barista,
+          came to downtown Cleveland to share with you his fresh, tasty and elegantly brewed drinks. <br><br> Came from the baking legacy of the Orlando,
+          James carries on the high standard when it comes to his crafts. You can expect every item you get at the Copper Moon is made from scratch,
+          with the utmost attention to detail and the pride of a barista veteran.
+        </div>
+      </div>
+
+      <div class="offer">
+        <div class="offerHeader">
+          Our Offers:
+        </div>
+        <div  class="offerList">
+          The Copper Moon offers a huge collection of 250 drinks made of freshly grounded coffee bean, fruits and ice-cream. On average, a new unique drink is
+          put together per month.
+        </div>
+      </div>
+
+      <div class="achievement">
+        <div class="achieveHeader">
+          Our Achivement:
+        </div>
+        <div class="achieveList">
+          For 4 consecutive year, The Copper Moon has been chosen as the Café of the Year by the Downtown Cleveland Residence Association (2013-2017).<br><br>
+          The shop has eperienced 25% annually compouned growth and 87% customer return rate.
+        </div>
+      </div>
+
+    </div>
+
   </body>
 </html>
