--- a/gallery.html
+++ b/gallery.html
@@ -16,11 +16,52 @@
             <li><a href="menu.html">MENU</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li  class="active"><a href="gallery.html">GALLERY</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
           </ul>
         </div>
       </nav>
-
     </div>
 
+    <div id=logo>
+      <img src="image/CopperMoon.png" style="width:200px;height:200px;">
+    </div>
+
+
+    <div class="galeryMaster">
+            <div class="gal1">
+              <a href="image/gallery/gal6.jpg" ><img src="image/gallery/gal6.jpg"  style="max-width: 100%;
+    max-height: 100%";></a>
+            </div>
+
+            <div class="gal2">
+              <a href="image/gallery/gal2.jpg" ><img src="image/gallery/gal2.jpg"  style="max-width: 100%;
+    max-height: 100%";></a>
+            </div>
+
+            <div class="gal3">
+              <a href="image/gallery/gal3.jpg" ><img src="image/gallery/gal3.jpg"  style="max-width: 100%;
+    max-height: 100%";></a>
+            </div>
+
+            <div class="gal4">
+              <a href="image/gallery/gal7.jpg" ><img src="image/gallery/gal7.jpg"  style="max-width: 100%;
+    max-height: 100%";></a>
+            </div>
+
+            <div class="gal5">
+              <a href="image/gallery/gal5.jpg" ><img src="image/gallery/gal5.jpg"  style="max-width: 100%;
+    max-height: 100%";></a>
+            </div>
+
+            <div class="gal6">
+              <a href="image/gallery/gal6.jpg" ><img src="image/gallery/gal6.jpg"  style="max-width: 100%;
+    max-height: 100%";></a>
+            </div>
+
+            <div class="gal7">
+              <a href="image/gallery/gal8.jpg" ><img src="image/gallery/gal8.jpg"  style="max-width: 100%;
+    max-height: 100%";></a>
+            </div>
+    </div>
   </body>
 </html>
