--- a/menu.html
+++ b/menu.html
@@ -17,27 +17,31 @@
             <li class="active"><a href="menu.html">MENU</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="gallery.html">GALLERY</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
           </ul>
         </div>
       </nav>
 
+      <div id=logo>
+        <img src="image/CopperMoon.png" style="width:200px;height:200px;">
+      </div>
 
       <div class="outer">
         <div class="centerdiv">
         <div>
-          <a href="#A" data-target="A"><img src="image/coffee.jpg" class="img-responsive img-circle " alt="Cinque Terre" style="width:200px;height:200px;"> </a>
+          <a id ="pic1" href="#A" data-target="A"><img src="image/coffee.jpg" class="img-responsive img-circle " alt="Cinque Terre" style="width:200px;height:200px;"> </a>
           <b>Coffee </b>
         </div>
         <div>
-          <a href="#B" data-target="B"><img src="image/smoothie.jpg" class="img-responsive img-circle" alt="Cinque Terre"style="width:200px;height:200px;"></a>
+          <a id ="pic2" href="#B" data-target="B"><img src="image/smoothie.jpg" class="img-responsive img-circle" alt="Cinque Terre"style="width:200px;height:200px;"></a>
           <b>Smoothie </b>
         </div>
         <div>
-          <a href="#C" data-target="C"><img src="image/tea.jpg"  class="img-responsive img-circle" alt="Cinque Terre" style="width:200px;height:200px;"></a>
+          <a id ="pic3" href="#C" data-target="C"><img src="image/tea.jpg"  class="img-responsive img-circle" alt="Cinque Terre" style="width:200px;height:200px;"></a>
           <b>Tea </b>
         </div>
         <div>
-          <a href="#D" data-target="D"><img src="image/donut.jpg" class="img-responsive img-circle" alt="Cinque Terre"style="width:200px;height:200px;"></a>
+          <a id ="pic4" href="#D" data-target="D"><img src="image/donut.jpg" class="img-responsive img-circle" alt="Cinque Terre"style="width:200px;height:200px;"></a>
           <b>Donut </b>
         </div>
       </div>
@@ -47,7 +51,7 @@
       <div class="coffeemenu">
         <ul>
           <div id="coffeeHeader">
-            <li >COFFEE:</li>
+            <li >COFFEE</li>
           </div>
           <div id="coffeeMenuItems">
               <li>Fresh Brew Coffee</li>
@@ -70,7 +74,7 @@
       <div class="smoothiemenu">
         <ul>
           <div id="smoothieHeader">
-            <li>Mix and Match your Favorite SMOOTHIE:</li>
+            <li>Mix and Match your Favorite SMOOTHIE</li>
           </div>
           <div id="smoothieMenuItems">
             <li>Strawberry</li>
@@ -91,7 +95,7 @@
       <div class="teamenu">
         <ul>
           <div id="teaHeader">
-            <li >TEA (available in Green or Black):</li>
+            <li >TEA (available in Green or Black)</li>
           </div>
           <div id="teaMenuItems">
             <li>Peach</li>
@@ -107,8 +111,20 @@
 
     <div class="donut"id="D">
       <div class="donutmenu" >
+        <ul>
+          <div id="donutHeader">
+            <li >DONUT:</li>
+          </div>
+          <div id="donutMenuItems">
+            <li>Cruller</li>
+            <li>Old-Fashioned Donut</li>
+            <li>Blueberry Donut</li>
+            <li>Sour Cream Donut</li>
+          </div>
+        <ul>
       </div>
       <div class="donutpic">
+        <img id=donut1 src="image/donut1.jpg" >
       </div>
     </div>
 
