--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
             <li><a href="menu.html">MENU</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="gallery.html">GALLERY</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
           </ul>
         </div>
       </nav>
@@ -36,19 +37,19 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
           <div class="item active">
-            <img src="image/image1.jpg" width="500" height="350">
+            <img src="image/image1.jpg">
           </div>
 
           <div class="item">
-            <img src="image/image2.jpg"  width="500" height="350">
+            <img src="image/image2.jpg">
           </div>
 
           <div class="item">
-            <img src="image/image3.jpg"  width="500" height="350">
+            <img src="image/image3.jpg">
           </div>
 
           <div class="item">
-            <img src="image/image4.jpg"  width="500" height="350">
+            <img src="image/image4.jpg">
           </div>
         </div>
       </div>
