--- a/about.html
+++ b/about.html
@@ -8,23 +8,18 @@
   </head>
 
   <body>
-    <div class="hfeed site">
-      <nav class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
-          <ul class="nav navbar-nav">
-            <li><a href="home.html">HOME</a></li>
-            <li><a href="menu.html">MENU</a></li>
-            <li class="active"><a href="about.html">ABOUT</a></li>
-            <li><a href="gallery.html">GALLERY</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-          </ul>
-        </div>
-      </nav>
-    </div>
-
-    <div id=logo>
-      <img src="image/CopperMoon.png" style="width:200px;height:200px;">
-    </div>
+    <nav id='nav_bar' class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div  class="container-fluid" id="myNavbar">
+        <ul  class="nav navbar-nav">
+          <li><a href="home.html">HOME</a></li>
+          <li><a href="menu.html">MENU</a></li>
+          <li class="active"><a href="about.html">ABOUT</a></li>
+          <li id='selected'><a><img src="image/CopperMoon.png" style="width:100px;height:100px;"></a>  <li>
+          <li><a href="gallery.html">GALLERY</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+      </div>
+    </nav>
 
     <div class="aboutMaster">
 
