--- a/home.html
+++ b/home.html
@@ -8,53 +8,54 @@
   </head>
 
   <body>
-    <div class="hfeed site">
-      <nav class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
-          <ul class="nav navbar-nav">
+
+      <nav id='nav_bar' class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div  class="container-fluid" id="myNavbar">
+          <ul  class="nav navbar-nav">
             <li class="active"><a href="home.html">HOME</a></li>
             <li><a href="menu.html">MENU</a></li>
             <li><a href="about.html">ABOUT</a></li>
+            <li id='selected'><a><img src="image/CopperMoon.png" style="width:100px;height:100px;"></a>  <li>
             <li><a href="gallery.html">GALLERY</a></li>
             <li><a href="contact.html">CONTACT</a></li>
           </ul>
         </div>
       </nav>
 
-      <div id=logo>
-        <img src="image/CopperMoon.png" style="width:200px;height:200px;">
-      </div>
+      <div class="home-master">
 
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-          <li data-target="#myCarousel" data-slide-to="3"></li>
-        </ol>
+        <!-- begin of pictures slides-->
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
+          </ol>
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img src="image/image1.jpg">
+            </div>
 
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-          <div class="item active">
-            <img src="image/image1.jpg">
-          </div>
+            <div class="item">
+              <img src="image/image2.jpg">
+            </div>
 
-          <div class="item">
-            <img src="image/image2.jpg">
-          </div>
+            <div class="item">
+              <img src="image/image3.jpg">
+            </div>
 
-          <div class="item">
-            <img src="image/image3.jpg">
-          </div>
-
-          <div class="item">
-            <img src="image/image4.jpg">
+            <div class="item">
+              <img src="image/image4.jpg">
+            </div>
           </div>
         </div>
-      </div>
-
+        <!-- end of pictures slides-->
+        
     </div>
+
 
   </body>
 </html>
