--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
   <body>
     <div class="hfeed site">
-      <nav class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
+      <nav id='nav_bar' class="navbar navbar-default navbar-fixed-top" role="navigation"  >
+        <div  class="container-fluid" id="myNavbar">
           <ul class="nav navbar-nav">
             <li class="active"><a href="home.html">HOME</a></li>
             <li><a href="menu.html">MENU</a></li>
