--- a/gallery.html
+++ b/gallery.html
@@ -3,8 +3,10 @@
   <head>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
+        <link rel="stylesheet" type="text/css" href="css/bootstrap-social.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
 
   <body>
@@ -57,5 +59,43 @@
     max-height: 100%";></a>
             </div>
     </div>
+    <div class="footerMenu">
+        <div class="followUs">
+          <div class="followUsHeader">
+            CONNECT WITH US
+          </div>
+          <div  class="followUsText">
+            Connect with us on social media to stay up-to-<br>date with the latest from The Copper Moon
+          </div>
+
+          <div class="temp" >
+            <ul class="socialList">
+              <li>
+                <a class="btn btn-social-icon btn-twitter"><span class="fa fa-twitter"></span></a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/thecoppermoon/" class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span> </a>
+              </li>
+              <li>
+                <a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram"></span> </a>
+              </li>
+              <li>
+                <a class="btn btn-social-icon btn-flickr"><span class="fa fa-flickr"></span> </a>
+              </li>
+            </ul>
+          </div>
+
+        </div>
+
+        <div class="contactUs">
+          <div class="contactUsHeader">
+            CONTACT US
+          </div>
+          <div  class="contactUsText">
+            1127 Euclid Ave,<br>Cleveland, OH 44115<br><br>Phone: (216) 296-9281
+          </div>
+        </div>
+    </div>
+
   </body>
 </html>
