--- a/home.html
+++ b/home.html
@@ -62,24 +62,38 @@
             CONNECT WITH US
           </div>
           <div  class="followUsText">
-            Connect with us on social media to stay up-to-date with the latest from The Copper Moon
+            Connect with us on social media to stay up-to-<br>date with the latest from The Copper Moon
           </div>
 
-          <div >
+          <div class="temp" >
             <ul class="socialList">
               <li>
-                <a class="btn btn-social-icon btn-twitter"><span class="fa fa-twitter"></span>  </a>
+                <a class="btn btn-social-icon btn-twitter"><span class="fa fa-twitter"></span></a>
               </li>
               <li>
-                <a class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span>  </a>
+                <a href="https://www.facebook.com/thecoppermoon/" class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span> </a>
               </li>
               <li>
-                <a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram"></span>  </a>
+                <a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram"></span> </a>
+              </li>
+              <li>
+                <a class="btn btn-social-icon btn-flickr"><span class="fa fa-flickr"></span> </a>
               </li>
             </ul>
           </div>
 
         </div>
+
+        <div class="contactUs">
+          <div class="contactUsHeader">
+            CONTACT US
+          </div>
+          <div  class="contactUsText">
+            1127 Euclid Ave,<br>Cleveland, OH 44115<br><br>Phone: (216) 296-9281
+
+          </div>
+        </div>
+
     </div>
 
   </body>
