a few spelling and word-choice changes

--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
           A Little About Us:
         </div>
         <div class="historyList">
-          The Copper Moon was found in May 2011. The owner, James Orlando, who has always been infatuated by the beautiful craft of being a barista,
-          came to downtown Cleveland to share with you his fresh, tasty and elegantly brewed drinks. <br><br> Came from the baking legacy of the Orlando,
+          The Copper Moon was founded in May 2011. The owner, James Orlando, who has always been infatuated by the beautiful craft of being a barista,
+          came to downtown Cleveland to share with you his fresh, tasty and elegantly brewed drinks. <br><br> Coming from the baking legacy of the Orlando,
           James carries on the high standard when it comes to his crafts. You can expect every item you get at the Copper Moon is made from scratch,
           with the utmost attention to detail and the pride of a barista veteran.
         </div>
@@ -39,17 +39,17 @@
 
       <div class="offer">
         <div class="offerHeader">
-          Our Offers:
+          Our Offerings:
         </div>
         <div  class="offerList">
-          The Copper Moon offers a huge collection of 250 drinks made of freshly grounded coffee bean, fruits and ice-cream. On average, a new unique drink is
-          put together per month.
+          The Copper Moon offers a huge collection of 250 drinks made of freshly grounded coffee bean, fruits and ice-cream. Usually, a new unique drink is
+          put together every month.
         </div>
       </div>
 
       <div class="achievement">
         <div class="achieveHeader">
-          Our Achivement:
+          Our Achivements:
         </div>
         <div class="achieveList">
           For 4 consecutive year, The Copper Moon has been chosen as the Caf&eacute; of the Year by the Downtown Cleveland Residence Association (2013-2017).<br><br>
