database created, menu in process

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
       <div  class="container-fluid" id="myNavbar">
         <ul  class="nav navbar-nav">
           <li><a href="home.html">HOME</a></li>
-          <li><a href="menu.html">MENU</a></li>
+          <li><a href="menu.php">MENU</a></li>
           <li><a href="about.html">ABOUT</a></li>
           <li id='selected'><a><img src="image/CopperMoon.png" style="width:100px;height:100px;"></a>  <li>
           <li><a href="gallery.html">GALLERY</a></li>
