--- a/home.html
+++ b/home.html
@@ -18,8 +18,8 @@
             <li><a href="menu.html">MENU</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li id='selected'><a><img src="image/CopperMoon.png" style="width:100px;height:100px;"></a>  <li>
-            <li><a href="gallery.html">GALLERY</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="gallery.php">GALLERY</a></li>
+            <li><a href="contact.php">CONTACT</a></li>
           </ul>
         </div>
       </nav>
