--- a/menu.html
+++ b/menu.html
@@ -24,145 +24,86 @@
       </div>
     </nav>
 
-    <div class="menuMaster">
-      <div class="outer">
-        <div class="centerdiv">
-          <div>
-            <a id ="pic1" href="#A" data-target="A"><img src="image/coffee.jpg" class="img-responsive img-circle " alt="Cinque Terre" style="width:100px;height:100px;"> </a>
+    <div class=menuHeader>
+      <div class=menuNav>
+        <nav id='menu_bar' class="navbar navbar-inverse" role="navigation">
+          <div  class="container-fluid" id="myNavbar2">
+            <ul class="nav navbar-nav">
+              <li><a href="#">COFFEE</a></li>
+              <li><a href="#">SMOOTHIE</a></li>
+              <li><a href="#">TEA</a></li>
+              <li><a href="#">ICE CREAM</a></li>
+            </ul>
           </div>
-          <div>
-            <a id ="pic2" href="#B" data-target="B"><img src="image/smoothie.jpg" class="img-responsive img-circle" alt="Cinque Terre"style="width:100px;height:100px;"></a>
-          </div>
-          <div>
-            <a id ="pic3" href="#C" data-target="C"><img src="image/tea.jpg"  class="img-responsive img-circle" alt="Cinque Terre" style="width:100px;height:100px;"></a>
-          </div>
-          <div>
-            <a id ="pic4" href="#D" data-target="D"><img src="image/donut.jpg" class="img-responsive img-circle" alt="Cinque Terre"style="width:100px;height:100px;"></a>
-          </div>
+        </nav>
       </div>
     </div>
 
-    <div class="coffee" id="A">
-      <div class="coffeemenu">
-        <ul>
-          <div id="coffeeHeader">
-            <li >COFFEE</li>
-          </div>
-          <div id="coffeeMenuItems">
-              <li>Fresh Brew Coffee</li>
-              <li>Cafe Americano</li>
-              <li>Cappuccino</li>
-              <li>Cafe Late</li>
-              <li>Caffe Mocha</li>
-              <li>White Chocolate Mocha</li>
-              <li>Expresso</li>
-              <li>Iced Cafe</li>
-            </div>
-        <ul>
+    <div class=menuMaster>
+      <div id="item1">
+        
       </div>
-      <div class="cofeepic">
-        <img id=coffee1 src="image/coffee1.jpg" >
+      <div id="item2">
+
+      </div>
+      <div id="item3">
+
+      </div>
+      <div id="item4">
+
+      </div>
+      <div id="item5">
+
+      </div>
+      <div id="item6">
+
       </div>
     </div>
+    <div class="displayMenu">
 
-    <div class="smoothie" id="B">
-      <div class="smoothiemenu">
-        <ul>
-          <div id="smoothieHeader">
-            <li>Mix and Match your Favorite SMOOTHIE</li>
-          </div>
-          <div id="smoothieMenuItems">
-            <li>Strawberry</li>
-            <li>Blueberry</li>
-            <li>Mango</li>
-            <li>Banana</li>
-            <li>Pineapple</li>
-            <li>Kiwi</li>
-          </div>
-        <ul>
-      </div>
-      <div class=smoothiePic>
-        <img id=smoothie1 src="image/smoothie1.jpg" >
-      </div>
+
     </div>
+  </div>
+   <div class="footerMenu">
+       <div class="followUs">
+         <div class="followUsHeader">
+           CONNECT WITH US
+         </div>
+         <div  class="followUsText">
+           Connect with us on social media to stay up-to-<br>date with the latest from The Copper Moon
+         </div>
 
-    <div class="tea" id="C">
-      <div class="teamenu">
-        <ul>
-          <div id="teaHeader">
-            <li >TEA (available in Green or Black)</li>
-          </div>
-          <div id="teaMenuItems">
-            <li>Peach</li>
-            <li>Raspberry</li>
-            <li>Blackberry</li>
-          </div>
-        <ul>
-      </div>
-      <div class="teapic">
-        <img id=tea1 src="image/tea1.jpg" >
-      </div>
-    </div>
-
-    <div class="donut"id="D">
-      <div class="donutmenu" >
-        <ul>
-          <div id="donutHeader">
-            <li >DONUT:</li>
-          </div>
-          <div id="donutMenuItems">
-            <li>Cruller</li>
-            <li>Old-Fashioned Donut</li>
-            <li>Blueberry Donut</li>
-            <li>Sour Cream Donut</li>
-          </div>
-        <ul>
-      </div>
-      <div class="donutpic">
-        <img id=donut1 src="image/donut1.jpg" >
-      </div>
-    </div>
- </div>
-
- <div class="footerMenu">
-     <div class="followUs">
-       <div class="followUsHeader">
-         CONNECT WITH US
-       </div>
-       <div  class="followUsText">
-         Connect with us on social media to stay up-to-<br>date with the latest from The Copper Moon
+         <div class="temp" >
+           <ul class="socialList">
+             <li>
+               <a class="btn btn-social-icon btn-twitter"><span class="fa fa-twitter"></span></a>
+             </li>
+             <li>
+               <a href="https://www.facebook.com/thecoppermoon/" class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span> </a>
+             </li>
+             <li>
+               <a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram"></span> </a>
+             </li>
+             <li>
+               <a class="btn btn-social-icon btn-flickr"><span class="fa fa-flickr"></span> </a>
+             </li>
+           </ul>
+         </div>
        </div>
 
-       <div class="temp" >
-         <ul class="socialList">
-           <li>
-             <a class="btn btn-social-icon btn-twitter"><span class="fa fa-twitter"></span></a>
-           </li>
-           <li>
-             <a href="https://www.facebook.com/thecoppermoon/" class="btn btn-social-icon btn-facebook"><span class="fa fa-facebook"></span> </a>
-           </li>
-           <li>
-             <a class="btn btn-social-icon btn-instagram"><span class="fa fa-instagram"></span> </a>
-           </li>
-           <li>
-             <a class="btn btn-social-icon btn-flickr"><span class="fa fa-flickr"></span> </a>
-           </li>
-         </ul>
+       <div class="contactUs">
+         <div class="contactUsHeader">
+           CONTACT US
+         </div>
+         <div  class="contactUsText">
+           1127 Euclid Ave,<br>Cleveland, OH 44115<br><br>Phone: (216) 296-9281
+         </div>
        </div>
+   </div>
 
-     </div>
 
-     <div class="contactUs">
-       <div class="contactUsHeader">
-         CONTACT US
-       </div>
-       <div  class="contactUsText">
-         1127 Euclid Ave,<br>Cleveland, OH 44115<br><br>Phone: (216) 296-9281
-       </div>
-     </div>
- </div>
+<!--
 
-  </body>
       <script>
         $(document).ready(function(){
           // Add smooth scrolling to all links
@@ -191,5 +132,6 @@
 
       </script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-
+-->
+  </body>
 </html>
