--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <nav id='nav_bar' class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div  class="container-fluid" id="myNavbar">
         <ul  class="nav navbar-nav">
-          <li><a href="home.html">HOME</a></li>
+          <li><a href="index.html">HOME</a></li>
           <li><a href="menu.html">MENU</a></li>
           <li class="active"><a href="about.html">ABOUT</a></li>
           <li id='selected'><a><img src="image/CopperMoon.png" style="width:100px;height:100px;"></a>  <li>
