--- a/menu.html
+++ b/menu.html
@@ -14,7 +14,7 @@
     <nav id='nav_bar' class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div  class="container-fluid" id="myNavbar">
         <ul  class="nav navbar-nav">
-          <li><a href="home.html">HOME</a></li>
+          <li><a href="index.html">HOME</a></li>
           <li  class="active"><a href="menu.html">MENU</a></li>
           <li><a href="about.html">ABOUT</a></li>
           <li id='selected'><a><img src="image/CopperMoon.png" style="width:100px;height:100px;"></a>  <li>
@@ -41,7 +41,7 @@
 
     <div class=menuMaster>
       <div id="item1">
-        
+
       </div>
       <div id="item2">
 
