--- a/menu.html
+++ b/menu.html
@@ -10,33 +10,22 @@
   </head>
 
   <body>
+      <div id="overlay" >
 
-      <div id="overlay" onclick="overlayOff()">
         <div id="variationDisplay" class="panel panel-default">
-            <div class="row">
-                <div class="col-md-4 variationSide">
-                    <div id="variationScroller">
-                        Thing<br />
-                        Thing<br />
-                        Thing<br />
-                        Thing<br />
-                        Thing<br />
-                        Thing<br />
-                        Thing<br />
-                        Thing<br />
-                        Thing<br />
-                        Thing<br />
-                        Thing<br />
-                        Thing<br />
-                        Thing<br />
-                        Thing<br />
-                        Thing<br />
-                        Thing<br />
-                        Thing<br />
-                    </div>
+          <button onclick="overlayOff()"> close</button>
+              <div class="o1">
+                  <a href="#">Home</a>
+                  <a href="#">Link 1</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                  <a href="#">Link 4</a>
+
+
                 </div>
-                <div class="col-md-8">Body</div>
-            </div>
+                <div class="o2">
+                  Body
+                </div>
         </div>
       </div>
 
@@ -341,36 +330,6 @@ function overlayOff() {
        </div>
    </div>
 
-<!--
 
-      <script>
-        $(document).ready(function(){
-          // Add smooth scrolling to all links
-          $("a").on('click', function(event) {
-
-            // Make sure this.hash has a value before overriding default behavior
-            if (this.hash !== "") {
-              // Prevent default anchor click behavior
-              event.preventDefault();
-
-              // Store hash
-              var hash = this.hash;
-
-              // Using jQuery's animate() method to add smooth page scroll
-              // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
-              $('html, body').animate({
-                scrollTop: $(hash).offset().top
-              }, 800, function(){
-
-                // Add hash (#) to URL when done scrolling (default click behavior)
-                window.location.hash = hash;
-              });
-            } // End if
-          });
-        });
-
-      </script>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
--->
   </body>
 </html>
