--- a/menu.html
+++ b/menu.html
@@ -7,9 +7,55 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script>
+        function showInfo(str) {
+          console.log("IMHERE"+str);
+          if (str=="") {
+            document.getElementById("o1").innerHTML="";
+            return;
+          }
+          var xmlhttp = new XMLHttpRequest();
+          xmlhttp.onreadystatechange=function() {
+            if (this.readyState==4 && this.status==200) {
+              document.getElementById("o1").innerHTML=this.responseText;
+            }
+          }
+          xmlhttp.open("GET","getItems.php?q="+str,true);
+          xmlhttp.send();
+      }
+      function getData(str) {
+        console.log("IMHERE"+str);
+        if (str=="") {
+          document.getElementById("o2").innerHTML="";
+          return;
+        }
+        var xmlhttp = new XMLHttpRequest();
+        xmlhttp.onreadystatechange=function() {
+          if (this.readyState==4 && this.status==200) {
+            document.getElementById("o2").innerHTML=this.responseText;
+          }
+        }
+        xmlhttp.open("GET","getDetail.php?q="+str,true);
+        xmlhttp.send();
+    }
+    </script>
   </head>
 
   <body>
+      <div id="overlay" >
+        <div id="variationDisplay" class="panel panel-default">
+              <div id="o1">
+              </div>
+              <div id="o2">
+                  Body
+              </div>
+        </div>
+              <div id="closeBtn">
+                <button onclick="overlayOff()" type="button" class="btn btn-warning"> Close</button>
+            </div>
+        </div>
+      </div>
+
     <nav id='nav_bar' class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div  class="container-fluid" id="myNavbar">
         <ul  class="nav navbar-nav">
@@ -28,10 +74,10 @@
         <nav id='menu_bar' class="navbar navbar-inverse" role="navigation">
           <div  class="container-fluid" id="myNavbar2">
             <ul class="nav navbar-nav">
-              <li><a href="#">COFFEE</a></li>
-              <li><a href="#">SMOOTHIE</a></li>
-              <li><a href="#">TEA</a></li>
-              <li><a href="#">ICE CREAM</a></li>
+              <li><a href="#"><button type="button" class="btn btn-warning" id="btn1" data-target="coffee">COFFEE</button></a></li>
+              <li><a href="#"><button type="button" class="btn btn-warning" id="btn2" data-target="smoothie">SMOOTHIE</button></a></li>
+              <li><a href="#"><button type="button" class="btn btn-warning" id="btn3" data-target="tea">TEA</button></a></li>
+              <li><a href="#"><button type="button" class="btn btn-warning" id="btn4" data-target="ic">ICE CREAM</button></a></li>
             </ul>
           </div>
         </nav>
@@ -39,118 +85,211 @@
     </div>
 
 
-    <button type="button" class="btn btn-warning" id="btn1" data-target="pilot">Btn1</button>
-    <button type="button" class="btn btn-warning" id="btn2" data-target="design">Btn2</button>
-    <button type="button" class="btn btn-warning" id="btn3" data-target="instrument">Btn3</button>
-
     <div id="content" class=menuMaster >
       <div id="dummy">
       </div>
     </div>
 
-    <div id="pilot"  style="display: none;">
-
+    <div id="coffee"  style="display: none;">
       <div id="item1">
         <div class="submenuTitle">
-          Latte
+          LATTE
         </div>
         <div class="submenuDescription">
             Coffee drink made with espresso and steamed milk.
         </div>
-        <button class="submenuButton"> Variation</button>
+
         <div class="submenuPrice">
-          2.25 &nbsp; 2.50 &nbsp; 2.75
+          2.25 &nbsp; . &nbsp; 2.50 &nbsp; . &nbsp; 2.75
+        </div>
+        <div class="btnContainer">
+          <button id="0"class="btn btn-warning" onclick="overlayOn();showInfo(this.id);"> Variation</button>
         </div>
       </div>
 
       <div id="item2">
         <div class="submenuTitle">
+          MOCHA
         </div>
         <div class="submenuDescription">
+          Coffee with chocolate flavoring, including a simple mix of hot chocolate and coffee
         </div>
-        <button class="submenuButton"> Variation</button>
         <div class="submenuPrice">
+          2.25 &nbsp; . &nbsp; 2.50 &nbsp; . &nbsp; 2.75
+        </div>
+        <div class="btnContainer">
+          <button id="31"class="btn btn-warning" onclick="overlayOn();showInfo(this.id);"> Variation</button>
         </div>
       </div>
+
       <div id="item3">
         <div class="submenuTitle">
+          AMERICANO
         </div>
         <div class="submenuDescription">
+            Watered down form of a regular espresso.
         </div>
-        <button class="submenuButton"> Variation</button>
         <div class="submenuPrice">
+          2.25 &nbsp; . &nbsp; 2.50 &nbsp; . &nbsp; 2.75
+        </div>
+        <div class="btnContainer">
+          <button id="61"class="btn btn-warning" onclick="overlayOn();showInfo(this.id);"> Variation</button>
         </div>
       </div>
+
       <div id="item4">
         <div class="submenuTitle">
+          CAPPUCINO
         </div>
         <div class="submenuDescription">
+            Espresso with foam on top.
         </div>
-        <button class="submenuButton"> Variation</button>
         <div class="submenuPrice">
+          2.25 &nbsp; . &nbsp; 2.50 &nbsp; . &nbsp; 2.75
+        </div>
+        <div class="btnContainer">
+          <button id="91"class="btn btn-warning" onclick="overlayOn();showInfo(this.id);"> Variation</button>
         </div>
       </div>
+
       <div id="item5">
         <div class="submenuTitle">
+          Macchiato
         </div>
         <div class="submenuDescription">
+            Coffee drink made with espresso and steamed milk.
         </div>
-        <button class="submenuButton"> Variation</button>
         <div class="submenuPrice">
+          2.25 &nbsp; . &nbsp; 2.50 &nbsp; . &nbsp; 2.75
+        </div>
+        <div class="btnContainer">
+          <button id="121"class="btn btn-warning" onclick="overlayOn();showInfo(this.id);"> Variation</button>
         </div>
       </div>
+
       <div id="item6">
         <div class="submenuTitle">
+          FRAPE
         </div>
         <div class="submenuDescription">
+            Coffee drink made with espresso and steamed milk.
         </div>
-        <button class="submenuButton"> Variation</button>
         <div class="submenuPrice">
+          2.25 &nbsp; . &nbsp; 2.50 &nbsp; . &nbsp; 2.75
         </div>
-      </div>
+        <div class="btnContainer">
+          <button id="151"class="btn btn-warning" onclick="overlayOn();showInfo(this.id);"> Variation</button>
+        </div>
     </div>
 
-    <div id="design" style="display: none;">
+    <div id="smoothie" style="display: none;">
+      <div id="smoothieHeader">
+        Mix and Match your favorite fresh fruits for the Ultimate Smoothie!!
+      </div>
       <div id="item1">
-        strictly testinglol
+        <div class="submenuTitle">
+          STRAWBERRY
+        </div>
+        <div class="submenuDescription">
+          <img src="image/menufruit/strawberry.jpg" class="img-rounded" alt="Cinque Terre" width="280" height="280">
+        </div>
       </div>
       <div id="item2">
-        strictly testinglol
+        <div class="submenuTitle">
+          KIWI
+        </div>
+        <div class="submenuDescription">
+            <img src="image/menufruit/kiwi.jpg" class="img-rounded" alt="Cinque Terre" width="280" height="280">
+        </div>
       </div>
       <div id="item3">
-        strictly testingll
+        <div class="submenuTitle">
+          BLACKBERRY
+        </div>
+        <div class="submenuDescription">
+          <img src="image/menufruit/blackberry.jpg" class="img-rounded" alt="Cinque Terre" width="280" height="280">
+        </div>
       </div>
       <div id="item4">
-        strictly testingada
+        <div class="submenuTitle">
+          PINEAPPLE
+        </div>
+        <div class="submenuDescription">
+          <img src="image/menufruit/pineapple.jpg" class="img-rounded" alt="Cinque Terre" width="280" height="280">
+        </div>
       </div>
       <div id="item5">
-        strictly testingada
+        <div class="submenuTitle">
+          BANANA
+        </div>
+        <div class="submenuDescription">
+            <img src="image/menufruit/banana.jpg" class="img-rounded" alt="Cinque Terre" width="280" height="280">
+        </div>
       </div>
       <div id="item6">
-        strictly testingfad
+        <div class="submenuTitle">
+          APPLE
+        </div>
+        <div class="submenuDescription">
+          <img src="image/menufruit/apple.jpg" class="img-rounded" alt="Cinque Terre" width="280" height="280">
+        </div>
       </div>
     </div>
 
-    <div id="instrument" style="display: none;">
+    <div id="tea" style="display: none;">
       <div id="item1">
-        afalnf
+        <div class="submenuTitle">
+          BLACK TEA
+        </div>
+        <div class="submenuDescription">
+            <img src="image/menufruit/blacktea.jpg" class="img-rounded" alt="Cinque Terre" width="280" height="280">
+        </div>
       </div>
       <div id="item2">
-        aga
+        <div class="submenuTitle">
+          CHAI TEA
+        </div>
+        <div class="submenuDescription">
+            <img src="image/menufruit/chaitea.jpg" class="img-rounded" alt="Cinque Terre" width="280" height="280">
+        </div>
       </div>
       <div id="item3">
-      abaf
-      </div>
-      <div id="item4">
-      AGaff
-      </div>
-      <div id="item5">
-        afasd
-      </div>
-      <div id="item6">
-        arasdsaa
+        <div class="submenuTitle">
+            GREEN TEA
+        </div>
+        <div class="submenuDescription">
+            <img src="image/menufruit/greentea.jpg" class="img-rounded" alt="Cinque Terre" width="280" height="280">
+        </div>
       </div>
     </div>
+
+    <div id="ic" style="display: none;">
+      <div id="item1">
+        <div class="submenuTitle">
+            ICE CREAM
+        </div>
+        <div class="submenuDescription">
+            <img src="image/menufruit/icecream.jpg" class="img-rounded" alt="Cinque Terre" width="280" height="280">
+        </div>
+      </div>
+      <div id="item2">
+        <div class="submenuTitle">
+           MILK SHAKE
+        </div>
+        <div class="submenuDescription">
+            <img src="image/menufruit/milkshake.jpg" class="img-rounded" alt="Cinque Terre" width="280" height="280">
+        </div>
+      </div>
+      <div id="item3">
+        <div class="submenuTitle">
+           AFFOGATO
+        </div>
+        <div class="submenuDescription">
+            <img src="image/menufruit/affogato.jpg" class="img-rounded" alt="Cinque Terre" width="280" height="280">
+        </div>
+      </div>
+    </div>
+
 <script>
 
 $('.btn').click(function() {
@@ -161,6 +300,17 @@ $('.btn').click(function() {
   $(target).show();
   console.log("PRINTING : " +target);
 });
+
+
+// transparent overlay
+function overlayOn() {
+    document.getElementById("overlay").style.display = "block";
+}
+
+function overlayOff() {
+    document.getElementById("overlay").style.display = "none";
+}
+
 
 </script>
 
@@ -207,36 +357,6 @@ $('.btn').click(function() {
        </div>
    </div>
 
-<!--
 
-      <script>
-        $(document).ready(function(){
-          // Add smooth scrolling to all links
-          $("a").on('click', function(event) {
-
-            // Make sure this.hash has a value before overriding default behavior
-            if (this.hash !== "") {
-              // Prevent default anchor click behavior
-              event.preventDefault();
-
-              // Store hash
-              var hash = this.hash;
-
-              // Using jQuery's animate() method to add smooth page scroll
-              // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
-              $('html, body').animate({
-                scrollTop: $(hash).offset().top
-              }, 800, function(){
-
-                // Add hash (#) to URL when done scrolling (default click behavior)
-                window.location.hash = hash;
-              });
-            } // End if
-          });
-        });
-
-      </script>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
--->
   </body>
 </html>
