Database acess and fix some css

--- a/home.html
+++ b/home.html
@@ -56,7 +56,9 @@
         <!-- end of pictures slides-->
 
     </div>
+
     <div class="footerMenu">
+      <div class="wrapper">
         <div class="followUs">
           <div class="followUsHeader">
             CONNECT WITH US
@@ -81,7 +83,6 @@
               </li>
             </ul>
           </div>
-
         </div>
 
         <div class="contactUs">
@@ -90,9 +91,10 @@
           </div>
           <div  class="contactUsText">
             1127 Euclid Ave,<br>Cleveland, OH 44115<br><br>Phone: (216) 296-9281
-
           </div>
         </div>
+      </div>
+    </div>
 
     </div>
 
