--- a/about.html
+++ b/about.html
@@ -58,7 +58,9 @@
       </div>
 
     </div>
+
     <div class="footerMenu">
+      <div class="wrapper">
         <div class="followUs">
           <div class="followUsHeader">
             CONNECT WITH US
@@ -83,7 +85,6 @@
               </li>
             </ul>
           </div>
-
         </div>
 
         <div class="contactUs">
@@ -94,6 +95,8 @@
             1127 Euclid Ave,<br>Cleveland, OH 44115<br><br>Phone: (216) 296-9281
           </div>
         </div>
+      </div>
+    </div>
 
     </div>
 
