--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,9 @@
         </div>
       </div>
     </div>
+
     <div class="footerMenu">
+      <div class="wrapper">
         <div class="followUs">
           <div class="followUsHeader">
             CONNECT WITH US
@@ -98,6 +100,7 @@
             1127 Euclid Ave,<br>Cleveland, OH 44115<br><br>Phone: (216) 296-9281
           </div>
         </div>
+      </div>
     </div>
 
   </body>
