--- a/gallery.html
+++ b/gallery.html
@@ -60,6 +60,7 @@
             </div>
     </div>
     <div class="footerMenu">
+      <div class="wrapper">
         <div class="followUs">
           <div class="followUsHeader">
             CONNECT WITH US
@@ -84,7 +85,6 @@
               </li>
             </ul>
           </div>
-
         </div>
 
         <div class="contactUs">
@@ -95,6 +95,7 @@
             1127 Euclid Ave,<br>Cleveland, OH 44115<br><br>Phone: (216) 296-9281
           </div>
         </div>
+      </div>
     </div>
 
   </body>
