Revert "converted variation overlay into percentages instead of pixels"
This reverts commit 2400dac54ef38eb0e8f2ab579a3b2abb5d72b4c0.

--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
       <div id="overlay" >
 
         <div id="variationDisplay" class="panel panel-default">
-
+          <button onclick="overlayOff()"> close</button>
               <div class="o1">
                   <a href="#">Home</a>
                   <a href="#">Link 1</a>
@@ -24,11 +24,9 @@
 
                 </div>
                 <div class="o2">
-                    <button id="overlayclosebutton" onclick="overlayOff()"> close</button>
                   Body
                 </div>
         </div>
-
       </div>
 
     <nav id='nav_bar' class="navbar navbar-default navbar-fixed-top" role="navigation">
