--- a/about.html
+++ b/about.html
@@ -3,7 +3,9 @@
   <head>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
-        <link rel="stylesheet" type="text/css" href="css/bootstrap-social.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-social.css">
+    <link href='//fonts.googleapis.com/css?family=Hind' rel='stylesheet'>
+    <link href='//fonts.googleapis.com/css?family=Philosopher' rel='stylesheet'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,7 +15,7 @@
     <nav id='nav_bar' class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div  class="container-fluid" id="myNavbar">
         <ul  class="nav navbar-nav">
-          <li><a href="home.html">HOME</a></li>
+          <li><a href="index.html">HOME</a></li>
           <li><a href="menu.html">MENU</a></li>
           <li class="active"><a href="about.html">ABOUT</a></li>
           <li id='selected'><a><img src="image/CopperMoon.png" style="width:100px;height:100px;"></a>  <li>
@@ -42,8 +44,8 @@
           Our Offerings:
         </div>
         <div  class="offerList">
-          The Copper Moon offers a huge collection of 250 drinks made of freshly grounded coffee bean, fruits and ice-cream. Usually, a new unique drink is
-          put together every month.
+          The Copper Moon offers a huge selection of 250 drinks made from freshly ground coffee beans, fruits and ice cream. A new, unique drink is
+          usually created every month.
         </div>
       </div>
 
@@ -52,7 +54,7 @@
           Our Achivements:
         </div>
         <div class="achieveList">
-          For 4 consecutive year, The Copper Moon has been chosen as the Caf&eacute; of the Year by the Downtown Cleveland Residence Association (2013-2017).<br><br>
+          For four consecutive years, The Copper Moon has been chosen as the Caf&eacute; of the Year by the Downtown Cleveland Residence Association (2013-2017).<br><br>
           The shop has eperienced 25% annually compouned growth and 87% customer return rate.
         </div>
       </div>
@@ -66,7 +68,7 @@
             CONNECT WITH US
           </div>
           <div  class="followUsText">
-            Connect with us on social media to stay up-to-<br>date with the latest from The Copper Moon
+            Connect with us on social media to stay up-to-date with the latest from The Copper Moon
           </div>
 
           <div class="temp" >
