--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,9 @@
   <head>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
-        <link rel="stylesheet" type="text/css" href="css/bootstrap-social.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-social.css">
+    <link href='//fonts.googleapis.com/css?family=Hind' rel='stylesheet'>
+    <link href='//fonts.googleapis.com/css?family=Philosopher' rel='stylesheet'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,7 +15,7 @@
     <nav id='nav_bar' class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div  class="container-fluid" id="myNavbar">
         <ul  class="nav navbar-nav">
-          <li><a href="home.html">HOME</a></li>
+          <li><a href="index.html">HOME</a></li>
           <li><a href="menu.html">MENU</a></li>
           <li><a href="about.html">ABOUT</a></li>
           <li id='selected'><a><img src="image/CopperMoon.png" style="width:100px;height:100px;"></a>  <li>
@@ -23,7 +25,7 @@
       </div>
     </nav>
 
-    <div class="galeryMaster">
+    <div class="galleryMaster">
             <div class="gal1">
               <a href="image/gallery/gal6.jpg" ><img src="image/gallery/gal6.jpg"  style="max-width: 100%;
     max-height: 100%";></a>
@@ -66,7 +68,7 @@
             CONNECT WITH US
           </div>
           <div  class="followUsText">
-            Connect with us on social media to stay up-to-<br>date with the latest from The Copper Moon
+            Connect with us on social media to stay up-to-date with the latest from The Copper Moon
           </div>
 
           <div class="temp" >
