--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-social.css">
+    <link href='//fonts.googleapis.com/css?family=Hind' rel='stylesheet'>
+    <link href='//fonts.googleapis.com/css?family=Philosopher' rel='stylesheet'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -56,7 +58,7 @@
     <nav id='nav_bar' class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div  class="container-fluid" id="myNavbar">
         <ul  class="nav navbar-nav">
-          <li><a href="home.html">HOME</a></li>
+          <li><a href="index.html">HOME</a></li>
           <li  class="active"><a href="menu.html">MENU</a></li>
           <li><a href="about.html">ABOUT</a></li>
           <li id='selected'><a><img src="image/CopperMoon.png" style="width:100px;height:100px;"></a>  <li>
@@ -151,7 +153,7 @@
 
       <div id="item5">
         <div class="submenuTitle">
-          Macchiato
+          MACCIATO
         </div>
         <div class="submenuDescription">
             Coffee drink made with espresso and steamed milk.
@@ -324,7 +326,7 @@ function overlayOff() {
           CONNECT WITH US
         </div>
         <div  class="followUsText">
-          Connect with us on social media to stay up-to-<br>date with the latest from The Copper Moon
+          Connect with us on social media to stay up-to-date with the latest from The Copper Moon
         </div>
 
         <div class="temp" >
