text overlay for home screen carousel

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
       <div class="home-master">
         <!-- begin of pictures slides-->
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <span class="textOverlay" id="titleOverlay">
+              THE COPPER MOON
+            </span>
+            <span class="textOverlay" id="subOverlay">
+              a new brew in coffee
+            </span>
           <!-- Indicators -->
           <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
